[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exapyte"
version = "0.1.0"
description = "Exabyte-scale distributed data platform with pluggable consensus protocols"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "asyncio>=3.4.3",
    "aiohttp>=3.8.0",
    "msgpack>=1.0.4",
    "argparse>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "black>=22.1.0",
    "isort>=5.10.1",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[project.scripts]
exapyte = "exapyte.main:main"
